# codingWebSearch

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CONFIGURING.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  devlog.md  docker-compose.yml  pyproject.toml  references.md  requirements.txt  server.py
.github/workflows/: ci.yml  docker-publish.yml
test_reports/: codingWebSearch_MCP_test_report_2026-04-30.md
tests/: test_regressions.py
