[project]
name = "codingWebSearch"
version = "0.3.0"
description = "Ultimate open-source MCP web search server for coding agents — 16 tools, 6 search engines, parallel execution, direct package APIs, tech news, error debugging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "SAKICHANNN" },
]
keywords = [
    "mcp", "model-context-protocol", "web-search", "coding-agent",
    "ai-agent", "llm-tools", "code-search", "debugging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/SAKICHANNN/codingWebSearch"
Repository = "https://github.com/SAKICHANNN/codingWebSearch"
Issues = "https://github.com/SAKICHANNN/codingWebSearch/issues"

[project.scripts]
codingWebSearch = "server:main"
