[project]
name = "codingWebSearch"
version = "0.6.0"
description = "Ultimate open-source MCP web search — 21 tools, 7 engines, SearXNG, batch crawl, RSS, CVE, Docker, CI/CD, comprehensive docs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "SAKICHANNN" },
]
keywords = [
    "mcp", "model-context-protocol", "web-search", "coding-agent",
    "ai-agent", "llm-tools", "code-search", "debugging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.27.0",
    "ddgs>=9.14.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.0",
]

[project.urls]
Homepage = "https://github.com/SAKICHANNN/codingWebSearch"
Repository = "https://github.com/SAKICHANNN/codingWebSearch"
Issues = "https://github.com/SAKICHANNN/codingWebSearch/issues"

[project.scripts]
codingWebSearch = "server:main"
